fixed issue where page shifts up

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -17,7 +17,7 @@ body {
     min-width: 400px;
     background-color: white;
     z-index: 1;
-    height: 100vh;
+    height: 98vh;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
     border-left: 1px solid lightgray;
     display: flex;
